@@ -1,3 +1,9 @@
+2011-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* pop3.el (pop3-number-of-responses): Removed.
+	(pop3-wait-for-messages): Rewrite to take linear time instead of
+	exponential time.
+
 2011-09-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-sum.el (gnus-summary-show-article): Bind `shr-ignore-cache' to
